--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
     <h2>Contact & Social Media</h2>
     <div class="contact">
-      <a href="https://instagram.com/gangster_yayong" target="_blank">Instagram</a>
-      <a href="https://open.kakao.com/o/syhgr9xc" target="_blank">Kakao Open Chat</a>
-    </div>
+      <a href="https://instagram.com/gangster_yayong" target="_blank" class="custom-btn">Instagram</a>
+      <a href="mailto:chang14@naver.com" class="custom-btn">Email: chang14@naver.com</a>
+      <a href="https://open.kakao.com/o/syhgr9xc" target="_blank" class="custom-btn">Kakao Open Chat</a>   
   </div>
 
 </body>
